--- a/css/base.css
+++ b/css/base.css
@@ -122,6 +122,10 @@ a {
   padding-top: 0;
   margin-top: 30px;
 }
+.margin-top-big {
+  padding-top: 0;
+  margin-top: 100px;
+}
 .slick-slide {
   padding: 20px 50px 0px 50px;
   background: var(--color-white);
@@ -181,7 +185,8 @@ a {
   }
 }
 @keyframes slide-right2 {
-  0% {display: none;
+  0% {
+    display: none;
     transform: translateX(100vw);
     -webkit-transform: translateX(100vw);
     -moz-transform: translateX(100vw);
@@ -212,7 +217,7 @@ a {
     -ms-transform: translateX(100vw);
     -o-transform: translateX(100vw);
   }
-  100%{
+  100% {
     display: none;
   }
 }
@@ -222,7 +227,47 @@ a {
   }
   100% {
     opacity: 1;
-   
   }
 }
-
+.grid_2_column {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-gap: 50px;
+}
+.project-desktop {
+  width: 100%;
+  border: 1px solid var(--services-tabs-active-links);
+  border-radius: 0 0 20px 20px;
+  -webkit-border-radius: 0 0 20px 20px;
+  -moz-border-radius: 0 0 20px 20px;
+  -ms-border-radius: 0 0 20px 20px;
+  -o-border-radius: 0 0 20px 20px;
+}
+.project-mobile {
+  border: 1px solid var(--services-tabs-active-links);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+.project-name {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  background: var(--services-tabs-active-links);
+  border-radius: 20px 20px 0 0;
+  -webkit-border-radius: 20px 20px 0 0;
+  -moz-border-radius: 20px 20px 0 0;
+  -ms-border-radius: 20px 20px 0 0;
+  -o-border-radius: 20px 20px 0 0;
+}
+.project-name p {
+  font-size: 70%;
+  padding: 10px;
+  text-align: center;
+  margin: 0;
+  background: #fff;
+  border: 10px solid var(--services-tabs-active-links);
+  z-index: 0;
+}
