--- a/css/base.css
+++ b/css/base.css
@@ -139,7 +139,7 @@ a {
 .slick-prev {
   position: absolute;
     /* top: -80px; */
-    margin-top: -40px;
+    margin-top: -60px;
     background: none;
     left: .1%;
     z-index: 1;
@@ -148,7 +148,7 @@ a {
   position: absolute;
   background: none;
   z-index: 1;
-  margin-top: -40px;
+  margin-top: -60px;
   right: 2.9%;
 }
 .slick-prev:before,
@@ -300,4 +300,14 @@ a {
 .technology img{
  max-width: 50px;
  margin-right: 40px;
+}
+.sertificate-slider{
+  padding: 20px;
+  background: var(--color-white);
+  box-shadow: 0 0 20px var(--shadow-color);
+  margin: 30px;
+}
+.sertificate-slider img{
+  width: 1200px;
+  max-width: 100%;
 }
