--- a/css/base.css
+++ b/css/base.css
@@ -138,11 +138,11 @@ a {
 }
 .slick-prev {
   position: absolute;
-    /* top: -80px; */
-    margin-top: -60px;
-    background: none;
-    left: .1%;
-    z-index: 1;
+  /* top: -80px; */
+  margin-top: -60px;
+  background: none;
+  left: 0.1%;
+  z-index: 1;
 }
 .slick-next {
   position: absolute;
@@ -237,8 +237,9 @@ a {
   width: 100%;
   margin: 10px auto;
 }
-.projects-page .article-title{
-  grid-column: 2/12;left: 3%;
+.projects-page .article-title {
+  grid-column: 3/12;
+  left: 0;
   padding: 10px;
 }
 .grid_2_column {
@@ -290,24 +291,137 @@ a {
   border: 10px solid var(--services-tabs-active-links);
   z-index: 0;
 }
-.technology{
+.technology {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
 }
-.technology img{
- max-width: 50px;
- margin-right: 40px;
+.technology img {
+  max-width: 50px;
+  margin-right: 40px;
 }
-.sertificate-slider{
+.sertificate-slider {
   padding: 20px;
   background: var(--color-white);
   box-shadow: 0 0 20px var(--shadow-color);
   margin: 30px;
 }
-.sertificate-slider img{
+.sertificate-slider img {
   width: 1200px;
   max-width: 100%;
+}
+.our_projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-gap: 30px;
+}
+.page-title {
+  margin-top: 120px;
+  font-family: Formular;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 29px;
+  letter-spacing: 0.03em;
+  color: var(--services-tabs-active-links);
+  text-align: center;
+}
+.contact__grid_2column {
+  padding-top: 50px;
+  position: relative;
+  width: 80%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  grid-gap: 50px;
+  margin-bottom: 100px;
+}
+.contact__grid_1column {
+  padding-top: 50px;
+  position: relative;
+  width: 540px;
+  max-width: 100%;
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.adress-text {
+  font-family: Formular;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: 0.03em;
+  color: var(--services-tabs-active-links);
+  text-align: center;
+}
+.adress_blocks {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
+  align-items: flex-start;
+}
+.one-adress-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.contact-form-title {
+  font-family: Formular;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 26px;
+  line-height: 32px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #121e44;
+}
+.contact-form-text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 26px;
+  letter-spacing: 0.02em;
+  color: #95a5cf;
+}
+.contact-form-text::placeholder {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 26px;
+  letter-spacing: 0.02em;
+  color: #95a5cf;
+}
+.contact_form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.contact_form input,
+.contact_form select {  
+  outline: none;
+  border: 0;
+  background: transparent;
+  margin:0 10px 40px 0;
+  width: 100%;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #374D7E;
+}
+.contact_form p {
+  margin: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
